<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>zingg</groupId>
	<artifactId>parent</artifactId>
	<version>${zingg.version}</version>
	<packaging>pom</packaging>
	<organization>
		<name>Zingg</name>
		<url>http://www.zingg.ai</url>
	</organization>
	<licenses>
		<license>
			<name>GNU AGPL v3.0</name>
			<url>https://www.gnu.org/licenses/agpl-3.0.en.html</url>
			<distribution>repo</distribution>
		</license>
	</licenses>
	<developers>
		<developer>
			<id>zingg</id>
			<name>Zingg Dev</name>
			<organization>Zingg</organization>
			<organizationUrl>http://www.zingg.ai</organizationUrl>
		</developer>
	</developers>
	<modules>
		<module>common</module>
		<module>spark</module>
		<module>assembly</module>
	</modules>
	<profiles>
		<profile>
			<id>spark-3.4</id>
			<activation>
				<property>
					<name>spark</name>
					<value>3.4</value>
				</property>
			</activation>
			<properties>
				<spark.version>3.4.0</spark.version>
				<scala.version>2.12.17</scala.version>
				<spark.binary.version>3.4</spark.binary.version>
				<scala.binary.version>2.12</scala.binary.version>
				<graphframes.version>0.8.3-spark3.4-s_2.12</graphframes.version>
			</properties>
		</profile>
		<profile>
			<id>spark-3.5</id>
			<activation>
				<activeByDefault>true</activeByDefault>
				<property>
					<name>spark</name>
					<value>3.5</value>
				</property>
			</activation>
			<properties>
				<spark.version>3.5.0</spark.version>
				<scala.version>2.12.10</scala.version>
				<spark.binary.version>3.5</spark.binary.version>
				<scala.binary.version>2.12</scala.binary.version>
				<graphframes.version>0.8.3-spark3.5-s_2.12</graphframes.version>
			</properties>
		</profile>
	</profiles>
	<properties>
		<zingg.version>0.4.1-SNAPSHOT</zingg.version>
		<skipTests>false</skipTests>
		<failIfNoTests>false</failIfNoTests>
		<maven.compiler.source>11</maven.compiler.source>
		<maven.compiler.target>11</maven.compiler.target>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<mcheckstyle.version>2.10</mcheckstyle.version>
		<mfindbugs.version>2.5.2</mfindbugs.version>
		<mjavadoc.version>2.9.1</mjavadoc.version>
		<maven-compiler-plugin.version>3.8.1</maven-compiler-plugin.version>
		<maven-jar-plugin.version>2.3.2</maven-jar-plugin.version>
		<commons.lang.version>2.3</commons.lang.version>
		<shade.plugin.version>2.4.3</shade.plugin.version>
		<mainClass>zingg.client.Client</mainClass>
	</properties>

	<repositories>
		<!-- list of other repositories -->
		<repository>
			<id>Central Repository</id>
			<url>https://repo1.maven.org/maven2/</url>
		</repository>
		<repository>
			<id>SparkPackagesRepo</id>
			<url>https://repos.spark-packages.org/</url>
		</repository>		
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-inline</artifactId>
			<version>5.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.mockito</groupId>
			<artifactId>mockito-core</artifactId>
			<version>5.2.0</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>com.opencsv</groupId>
			<artifactId>opencsv</artifactId>
			<version>5.9</version>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-engine</artifactId>
			<version>5.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-api</artifactId>
			<version>5.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter-params</artifactId>
			<version>5.8.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-all</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>commons-logging</groupId>
			<artifactId>commons-logging</artifactId>
			<version>1.1.1</version>
		</dependency>
       <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-core</artifactId>
            <version>2.15.2</version>
        </dependency>	
       <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-annotations</artifactId>
            <version>2.15.2</version>
        </dependency>
       <dependency>
            <groupId>com.fasterxml.jackson.core</groupId>
            <artifactId>jackson-databind</artifactId>
            <version>2.18.1</version>
        </dependency>	
       <dependency>
            <groupId>com.fasterxml.jackson.module</groupId>
            <artifactId>jackson-module-scala_2.12</artifactId>
            <version>2.15.2</version>
        </dependency>
																	
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-jar-plugin</artifactId>
				<version>${maven-jar-plugin.version}</version>
				<executions>
					<execution>
						<goals>
							<goal>test-jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>${maven-compiler-plugin.version}</version>
				<configuration>
					<source>${maven.compiler.source}</source>
					<target>${maven.compiler.target}</target>
					<showWarnings>true</showWarnings>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.2</version>
				<configuration>
					<statelessTestsetReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5Xml30StatelessReporter">
						<disable>false</disable>
						<version>3.0</version>
						<usePhrasedFileName>false</usePhrasedFileName>
						<usePhrasedTestSuiteClassName>true</usePhrasedTestSuiteClassName>
						<usePhrasedTestCaseClassName>true</usePhrasedTestCaseClassName>
						<usePhrasedTestCaseMethodName>true</usePhrasedTestCaseMethodName>
					</statelessTestsetReporter>
					<consoleOutputReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5ConsoleOutputReporter">
						<disable>false</disable>
						<encoding>UTF-8</encoding>
						<usePhrasedFileName>true</usePhrasedFileName>
					</consoleOutputReporter>
					<statelessTestsetInfoReporter implementation="org.apache.maven.plugin.surefire.extensions.junit5.JUnit5StatelessTestsetInfoReporter">
						<disable>false</disable>
						<usePhrasedFileName>true</usePhrasedFileName>
						<usePhrasedClassNameInRunning>true</usePhrasedClassNameInRunning>
						<usePhrasedClassNameInTestCaseSummary>true</usePhrasedClassNameInTestCaseSummary>
					</statelessTestsetInfoReporter>
            	</configuration>
        	</plugin>
			<plugin>
  					<groupId>org.jacoco</groupId>
 	    			<artifactId>jacoco-maven-plugin</artifactId>
  					<version>0.8.6</version>
   					<executions>
  						<execution>
    			  			<id>prepare-agent</id>
     			       		<goals>
       		     				<goal>prepare-agent</goal>
       			   			</goals>
    					</execution>
   			   			<execution>
            				<id>report</id>
            				<phase>prepare-package</phase>
               				<goals>
               					<goal>report</goal>
               				</goals>
        				</execution>
    				</executions>
			</plugin>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-install-plugin</artifactId>
					<version>2.5.2</version>
					<inherited>false</inherited>
					<executions>
						<execution>
							<id>install-external-ss</id>
							<phase>validate</phase>
							<configuration>
								<file>${project.basedir}/thirdParty/lib/secondstring.jar</file>
								<repositoryLayout>default</repositoryLayout>
								<groupId>com.wcohen.ss</groupId>
								<artifactId>secondstring</artifactId>
								<version>2021</version>
								<packaging>jar</packaging>
								<generatePom>true</generatePom>
							</configuration>
							<goals>
								<goal>install-file</goal>
							</goals>
						</execution>
						<execution>
							<id>install-external-py4j</id>
							<phase>validate</phase>
							<configuration>
								<file>${project.basedir}/thirdParty/lib/py4j0.10.9.jar</file>
								<repositoryLayout>default</repositoryLayout>
								<groupId>py4j</groupId>
								<artifactId>py4j</artifactId>
								<version>0.10.9</version>
								<packaging>jar</packaging>
								<generatePom>true</generatePom>
							</configuration>
							<goals>
								<goal>install-file</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
		</plugins>		
	</build>
</project>
